--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ install:
         - go get github.com/twpayne/go-kml
 
 script:
-        - go test -v ./...
-        - go test -cover -race ./...
+        - go test -v .
+        - go test -cover -race .
         - go vet ./...
 
 sudo: false
